Ntech.Logging/Seq/helm/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-seq-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  # - host: foo.bar.com
    - http:
        paths:
        - path: /sequi/(.*)
          pathType: Prefix
          backend:
            service:
              name: my-seq
              port:
                number: 80
        - path: /seqin/(.*)
          pathType: Prefix
          backend:
            service:
              name: my-seq
              port:
                number: 5341
